--- a/index.html
+++ b/index.html
@@ -115,7 +115,7 @@
         <footer class="pt-3 mt-4 pb-0 mb-0">
             <ul class="links nav justify-content-center pb-3 mb-3">
               <li class="links nav-item"><a href="https://www.linkedin.com/in/akhil-m-mathew-81944b23b/" class="links nav-link px-2 ">Linkedin</a></li>
-              <li class="nav-item"><a href="https://theravage.github.io/Online_Resume/index.html" class="links nav-link px-2 ">My Website</a></li>
+              <li class="nav-item"><a href="https://theravage.github.io/Capstone-Project-0001-Online_Resume/" class="links nav-link px-2 ">My Website</a></li>
               <li class="nav-item"><a href="https://www.instagram.com/thetrueravage/" class="links nav-link px-2 ">Instagram</a></li>
             </ul>
             <p class="copyright text-center mb-0">© 2024 Akhil M Mathew a.k.a TheRAVAGE</p>
